Add all needed variables to topMenu Fixes #30

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
                 margin: 0;
                 background: url(/assets/images/background-image.png);
             }
+            canvas{
+                margin-top: 80px;
+            }
         </style>
-
+        <link rel="stylesheet" href="/style/TopMenu.css">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/addons/p5.sound.js"></script>
         <script src="build/bundle.js"></script>
