--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <html>
     <head>
         <style>
+            @font-face {
+                font-family: 'space';
+                src: URL('/assets/fonts/space-silhouette-font-regular.ttf') format('truetype');
+            }
             html, body, canvas {
-                height: 100%;
+                height: 100%; 
                 width: 100%;
                 margin: 0;
                 background: url(/assets/images/background-image.png);
+                font-family: 'Russo One', sans-serif;
+                font-size: 1.6rem;
+            }
+            h1{
+                font-family: 'space';
+                font-size: 15rem;
+                color: #FAFF00;
+                text-align: center;
             }
             canvas{
                 margin-top: 80px;
             }
         </style>
         <link rel="stylesheet" href="/style/TopMenu.css">
+        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/addons/p5.sound.js"></script>
         <script src="build/bundle.js"></script>
