--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                 height: 3rem;
                 padding-left: 1rem;
                 padding-right:  1rem;
-                
-                
             }
+
+            .startGameButton:hover {
+                color: orange;
+            }
+
             canvas{
                 margin-top: 80px
             }
