--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
     <head>
+        <style>
+            @font-face {
+                font-family: 'space';
+                src: URL('/assets/fonts/space-silhouette-font-regular.ttf') format('truetype');
+            }
+
+            html, body, canvas {
+                height: 100%; 
+                width: 100%;
+                margin: 0;
+                background: url(/assets/images/background-image.png);
+                font-family: 'Russo One', sans-serif;
+                font-size: 1.6rem;
+            }
+
+            canvas{
+                margin-top: 80px;
+            }
+
+        </style>
         <link rel="stylesheet" href="/style/TopMenu.css">
         <link rel="stylesheet" href="/style/startmenu.css">
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
