--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 background: url(/assets/images/background-image.png);
                 font-family: 'Russo One', sans-serif;
                 font-size: 1.6rem;
+                overflow: hidden;
             }
             h1{
                 font-family: 'space';
