centered the title

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
                 src: URL('/assets/fonts/space-silhouette-font-regular.ttf') format('truetype');
             }
 
+            html {
+                cursor: url('/assets/images/cursor.png'), auto;
+            }
+
             html, body, canvas {
                 height: 100%; 
                 width: 100%;
