--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             }
 
         </style>
+        <link rel="stylesheet" href="/style/pauseMenu.css">
+        <link rel="stylesheet" href="/style/aboutMenu.css">
         <link rel="stylesheet" href="/style/TopMenu.css">
         <link rel="stylesheet" href="/style/startmenu.css">
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
