--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
                 src: URL('/assets/fonts/space-silhouette-font-regular.ttf') format('truetype');
             }
 
-            html {
-                cursor: url('/assets/images/cursor.png'), auto;
-            }
-
             html, body, canvas {
                 height: 100%; 
                 width: 100%;
@@ -17,6 +13,7 @@
                 background: url(/assets/images/background-image.png);
                 font-family: 'Russo One', sans-serif;
                 font-size: 1.6rem;
+                cursor: url(/assets/images/rocket-cursor.png), auto;
             }
 
             canvas{
