--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             }
 
         </style>
+        <link rel="stylesheet" href="/style/levelMenu.css">
         <link rel="stylesheet" href="/style/pauseMenu.css">
         <link rel="stylesheet" href="/style/aboutMenu.css">
         <link rel="stylesheet" href="/style/TopMenu.css">
