--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 height: 100%; 
                 width: 100%;
                 margin: 0;
+                color: #FAFF00;
                 background: url(/assets/images/background-image.png);
                 font-family: 'Russo One', sans-serif;
                 font-size: 1.6rem;
